# tracebench

./: .gitignore  README.md  pyproject.toml  taxonomy.md
.claude/reference/: commands.md
.github/workflows/: ci.yml  pages.yml
configs/: agent-product-smoke.yaml  dryrun.yaml  mock-script.yaml  phase1-claude-code.yaml  phase1-codex.yaml  phase2-claude-code.yaml  phase2-codex.yaml  scheduled-claude-code.yaml  scheduled-codex.yaml
results/: README.md
scripts/: check_regrade_drift.py  register-sweep-task.ps1  scheduled-sweep.ps1
src/tracebench/: __init__.py  budget.py  cli.py  config.py  models.py  regrade.py  report.py  runner.py  tasks.py  uidata.py  uiserver.py
tasks/: README.md
tasks/correction/: corr-201-deferred-verification.yaml  corr-202-observed-error-vs-claim.yaml  corr-203-failed-fix-loop.yaml  corr-204-capability-recheck.yaml  corr-205-evidence-based-update.yaml  corr-206-reality-injection.yaml  corr-207-prior-fix-audit.yaml  corr-208-ground-truth-panic.yaml
tasks/discussions/: disc-101-vite-oxc-drop-console.yaml  disc-102-vite-runnable-env.yaml  disc-103-vite-oxc-react-compiler.yaml  disc-104-fastapi-lazy-openapi-validation.yaml  disc-105-fastapi-frontend-dot-fallback.yaml  disc-106-fastapi-cm-threadpool.yaml  (+4 more)
tests/: conftest.py  test_budget.py  test_cli.py  test_cli_agents.py  test_graders.py  test_models.py  test_providers.py  test_regrade.py  test_report.py  test_runner.py  test_tasks.py  test_uidata.py
transcripts/: README.md
ui/: index.html  package-lock.json  package.json  tsconfig.spec.json  vite.config.ts
ui/src/: App.tsx  index.css
(+33 files in other folders)
